event handler added

--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
                     id="search-button">Search
                     Food</button>
             </div>
+            <!-- error message -->
+            <div id="error-message" class="w-50 mx-auto mt-5 text-danger">
+                <h3 id="item-not-found">oops! Item not found</h3>
+                <h3 id="empty-input-field">Please enter your favourite item!</h3>
+            </div>
             <!-- single meal detail  -->
-            <div id="meal-detail" class="w-50 mx-auto">
+            <div id="meal-detail" class="w-50 mx-auto mt-5">
             </div>
             <!-- food cards -->
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="food-cards">
+            <div title="Click here to see detailed information about this food at the top"
+                class="row row-cols-1 row-cols-md-3 g-4 mt-3" id="food-cards">
             </div>
         </section>
     </main>
